                    -----------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

03 December 13: I. Hrivnacova (monopole-V09-06-06)
- Updated README for removing AIDA

10 May 13: J.Apostolakis (monopole-V09-06-05)
- G4MonopoleTransportation and G4MonopoleEquation: 
      Adapted to use G4ChargeState to pass Magnetic & Electric Charge, 
          and to changed signature of SetChargeMomentumMass. 

19 February 13: V.Ivantchenko (monopole-V09-06-04)
- G4MonopoleTransportation - removed local variable fVerboseLevel
    and Get/Set methods; use instead verboseLevel variable from 
    the base class

13 February 13: I.Hrivnacova (monopole-V09-06-03)
- Applied coding guidelines 
  (virtual keyword, data members names and initialization)

01 February 13: V.Ivant (monopole-V09-06-02)
- G4MonopolePhysics - fixed warning at initialisation 

31 January 13: V.Ivant (monopole-V09-06-01)
- fixed initialisation after MT was introduced

10 January 13: V.Ivant (monopole-V09-06-00)
- fixed computation of monopole range

20 September 12: I.Hrivnacova (monopole-V09-05-03)
- Adding explicit includes of G4SystemOfUnits.hh and G4PhysicalConstants.hh
  where needed
- Replaced tabulators with space characters  

19 September 12: V.Ivant (monopole-V09-05-02)
- remove not needed file

4 September 12: I.Hrivnacova (monopole-V09-05-01)
- Updated CMakeLists.txt:
  adding visualization, copying macros, install target and comment lines 
- Adding .README  

28 May 12: V.Ivant (monopole-V09-05-00)
- applied code convention

08 December 10: V.Ivant (monopole-V09-03-08)
- added forgotten files

29 November 10: V.Ivant (monopole-V09-03-07)