@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+16 October 14: I. Hrivnacova (monopole-V10-00-00)
+- Fixed coding guidelines (long lines) in G4MonopoleTransportation.cc  
+
 03 December 13: I. Hrivnacova (monopole-V09-06-06)
 - Updated README for removing AIDA
 
